# termoservodetached

./: CMakeLists.txt  README.md  termoservodetached.ino
main/: ArduinoAdapters.h  app.ino
mocks/: MockArduino.cpp  MockHardware.h
src/: Hardware.h  Thermostat.cpp  Thermostat.h
termo-webtester/: README.md  server.py
termo-webtester/public/: app.js  index.html  style.css
test/: ThermostatTests.cpp
